# ocelib

./: .gitmodules  CMakeLists.txt  README.md
cel/: parse.hpp  potential_ptr.hpp  utility.hpp
cel/jios/: jin.hpp  jout.hpp  json_oj.hpp  outj.hpp  protobuf_ij.hpp  protobuf_oj.hpp
lib/: CMakeLists.txt  parse.cpp  utility.cpp
lib/jios/: jin.cpp  json_oj.cpp  protobuf_ij.cpp  protobuf_oj.cpp
proto/: CMakeLists.txt  ib.proto
swig/: CMakeLists.txt
swig/java/: boost_ptime.i
swig/python/: boost_ptime.i
swig/r/: CMakeLists.txt  boost_ptime.i  test.R  test.cpp  test.i
test/: CMakeLists.txt  jios_test.cpp  test.cpp
